k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: refapp
  labels:    
    app: "refapp"
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: "refapp"
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: refapp
        items:
        - key: application.properties
          path: application.properties
      containers:
      - name: "refapp"
        image: "sdcpclharbma001.swacorp.com/swa-rais/spring-boot-reference-application:latest"
        imagePullPolicy: "Always"
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 2
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8080
          initialDelaySeconds: 35
          periodSeconds: 5
          failureThreshold: 3
        resources:
          limits:
            memory: 200Mi
            cpu: "400m"
          requests:
            memory: 120Mi
            cpu: "200m"
