k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "refapp"
  labels:
    app: "refapp"
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: "refapp"
