k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: "refapp"
  labels:
    app: "refapp"
spec:
  to:
    kind: Service
    name: "refapp"
